fixed avatar overlaping

--- a/app/assets/stylesheets/pages/_index_events.scss
+++ b/app/assets/stylesheets/pages/_index_events.scss
@@ -38,6 +38,7 @@ position: relative;
   }
   h3 {
     margin-top: 0.3em;
-    font-size: 1.25rem;
+    font-size: 1.2rem;
+    max-width: 65%;
   }
 }
